white space fixed

--- a/src/components/Site.css
+++ b/src/components/Site.css
@@ -2,5 +2,5 @@
     background-color: #A7CDBD;
     height: 100vh;
     width: 100vw;
-    padding: 20px;
+    /* padding: 20px; */
 }
